{{$NEXT}}
    - Add option :clean to split-line
        which removes the brk char from the first part
        and normalizes both parts
    - Add test for new optio
    - Update docs

3.4.4  2024-06-27T15:17:47-05:00
    - Removed sub 'split-line-rw'
    - Add aliases for 'split-line':
      + split-str
      + splitstr
    - Add new option to sub 'split-line'
      + 'break-after'
         - split following the end of the $brk string
    - Add new option to sub 'normalize-string':
      + 'no-trim'
         - do NOT trim and collapse spaces by default
    - Add tests for new options

3.4.3  2024-05-06T16:01:13-05:00
    - Fix doc error

3.4.2  2024-04-30T18:12:06-05:00
    - Add new options to sub 'normalize-string':
      + 'tabs'
         - keep or normalize tabs
      + 'newlines'
         - keep or normalize newlines
      + 'collapse-ws-to'
         - collapse all contiguous spaces, tabs, and newlines
           to one's choice
    - Add new option to sub 'strip-comment':
      + 'first':
         - requires the comment character to be the
           first non-whitespace character on the line,
           otherwise, no comment is defined

3.4.1  2024-04-23T08:20:00-05:00
    - Add new option to sub 'strip-comment':
      + 'normalize-all':
          - normalizes the returned string
          - also normalizes the returned comment when
              the 'save-comment' option is True
    - Added test for new option

3.4.0  2024-04-09T14:57:37-05:00
    - Ensure the returned comment has all text from the comment
        character to the end of that line
    - Add new test and modify existing tests as required
    - Add alias named arg to sub strip-comment:
      + :mark(:$comment-char) <= new alias '$comment-char'
    - Tweak docs

3.3.3  2024-03-31T14:15:26-05:00
    - Upgrade Github workflows actions to @v4
    - Add missing .yml suffix to workflow files in dist.ini

3.3.2  2024-03-31T07:22:30-05:00
    - Change Github workflows to three-OS tests