@@ -220,7 +220,7 @@ maximum length, a starting position for the search, and the search
 direction (normally forward unless the C<:$rindex> option is C<True>).
 
 An additional option, C<:$clean>, causes the break character to
-be removed from the firsst part, and both parts to be normalized.
+be removed from the first part, and both parts to be normalized.
 
 An additional option, C<:$break-after>, causes the split to be delayed
 to the position after the input break string on a normal forward
@@ -240,6 +240,7 @@ sub split-line(
     UInt  :$start-pos       = 0,
     Bool  :$rindex          = False,
     Bool  :$break-after     = False,
+    Bool  :$clean           = False,
     --> List) is export(:split-line)
 {...}
 =end code
@@ -402,7 +403,7 @@ Tom Browder <tbrowder@cpan.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright &#x00A9; 2019-2024 Tom Browder
+Copyright &#x00A9; 2019-2025 Tom Browder
 
 This library is free software; you may redistribute it or modify it
 under the Artistic License 2.0.
