@@ -4,6 +4,7 @@
         and normalizes both parts
     - Add test for new optio
     - Update docs
+    - Update Windows github tests
 
 3.4.4  2024-06-27T15:17:47-05:00
     - Removed sub 'split-line-rw'
